labs/lab2/testsuite/good/subtyping/ass_double_int.cc
int main() {
  double d = 1;
  d = d / 2;
  printDouble(d);
  return 0;
}
